[package]
name = "muadb"
version = "0.1.0"
edition = "2021"

[dependencies]
auto_impl = "1.2.0"
bumpalo = { version = "3.16.0", features = ["boxed", "collections"] }
bytemuck = "1.16.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
smallvec = { version = "1.13.2", features = ["union"] }
thiserror = "1.0.61"
